Update portfolio homepage links.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My First Page</title>
+  <meta charset="UTF-8">
+  <title>My Web Dev Portfolio</title>
+  <link rel="stylesheet" href="styles.css"> <!-- optional -->
+  <style>
+    body { font-family: sans-serif; padding: 2rem; background: #f7f7f7; }
+    h1 { text-align: center; }
+    ul { list-style: none; padding: 0; }
+    li { margin: 1rem 0; }
+    a { text-decoration: none; color: #0070f3; font-weight: bold; }
+    a:hover { text-decoration: underline; }
+  </style>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button>Click Me</button>
+  <h1>My Web Dev Projects</h1>
+  <ul>
+    <li><a href="mood-check-survey/index.html" target="_blank">Mood Check Survey</a></li>
+    <!-- Add more projects here -->
+  </ul>
 </body>
 </html>
