--- a/mood-check-survey/index.html
+++ b/mood-check-survey/index.html
@@ -13,6 +13,16 @@
 <h1 id="title">Mood Check Survey</h1>
 <p id="description">Check how you're feeling today!</p>
 
+<div class="form-container">
+  <iframe 
+    src="https://docs.google.com/forms/d/e/1FAIpQLSdGxKCZhJOmdhTMmyBgTHVzbvtcz55ftEVTv3ZcmOXxkDgg0w/viewform?embedded=true" 
+    frameborder="0" 
+    marginheight="0" 
+    marginwidth="0">
+    Loading…
+  </iframe>
+</div>
+  
 <!--Form elements-->
 <form id="survey-form">
 
@@ -69,7 +79,8 @@
   
 <!--Submit-->
 <button id="submit" type="submit">Submit</button>
+</form>
 
 <p>Don't worry, be happy <3</p>
-
+</body>
 </html>
