--- a/mood-check-survey/index.html
+++ b/mood-check-survey/index.html
@@ -16,13 +16,15 @@
 <div class="form-container">
   <iframe 
     src="https://docs.google.com/forms/d/e/1FAIpQLSdGxKCZhJOmdhTMmyBgTHVzbvtcz55ftEVTv3ZcmOXxkDgg0w/viewform?embedded=true" 
+    width="100%" 
+    height="1627" 
     frameborder="0" 
     marginheight="0" 
     marginwidth="0">
     Loading…
   </iframe>
 </div>
-  
+
 <!--Form elements-->
 <form id="survey-form">
 
